compiler/tests/ar/errors/pure_void.salam
// لغة: العربية
// توقع: E012
نقي دالة لاشیء(قیمة: صحیح):
    ناتج := قیمة
نهاية

دالة الرئیسیة:
    لاشیء(1)
نهاية
